[ADD] common codeclibrary to handle large Base64 string to byte array conversion [TODO] ImageIO seems to be not able to handle large inputStream